<resources>
    <string name="app_name">TugasUTS</string>
    <string name="form_title">Formulir Pendaftaran</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="password">Password</string>
    <string name="retype_password">Ketik Ulang Password</string>
    <string name="send_button">Kirim</string>
    <string name="cancel_button">Batal</string>
    <string name="dashboard_title">DASHBOARD</string>
    <string name="logout_button">LOGOUT</string>
</resources>